--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,11 @@
         </div>
         <div class="card forcast">
           <p class="forcast-description">The forcast will be displayed here!</p>
-          <div class="loading loading-hidden">loading, this can take about 2 minutes...</div>
+          <div class="loading d-flex justify-content-center loading-hidden">
+            <div class="dots dot-1"></div>
+            <div class="dots dot-2"></div>
+            <div class="dots dot-3"></div>
+          </div>
         </div>
         
       </div>
